--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -1,23 +1,61 @@
 <section>
 
-    <article>
-        <h3>Interpolation</h3>
-        <p>{{ url }}</p>
-        <p>Resultado de 1 + 1 é: {{ 1 + 1 }}</p>
-        <p>Resultado de 1 + 1 não é: {{ 1 + 1 + getValor() }}</p>
-        <p>Curso Angular e gostou do curso: {{ cursoAngular && getCurtirCurso() }}</p>
-    </article>
+
 
     <article>
-        <h3>Imagem usando interpolação:</h3>
-        <img src="{{ imgUrl }}" alt="imagem aleatória">
+        <h3>Class e Style Binding</h3>
+        <div>
+            Selecione uma classe:
+            <select #classe (change)="0">
+                <option value="alert-success">Sucesso</option>
+                <option value="alert-primary">Primário</option>
+                <option value="alert-secondary">Secundário</option>
+                <option value="alert-danger">Perigo</option>
+                <option value="alert-warning">Aviso</option>
+                <option value="alert-info">Informação</option>
+                <option value="alert-light">Claro</option>
+                <option value="alert-dark">Escuro</option>
+            </select>
+        </div>
     </article>
 
-    <article>
-        <h3>Imagem usando property binding:</h3>
-        <img [src]="imgUrl" alt="imagem aleatória">
-        <p>Como o Angular lê isso? Da maneira abaixo:</p>
-        <img bind-src="imgUrl" >
-    </article>
+    <br>
+    <div class="alert" role="alert" [class.alert-primary]="classe.value == 'alert-primary'">
+        A simple primary alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+    </div>
+    <div class="alert" role="alert" [class.alert-secondary]="classe.value == 'alert-secondary'">
+        A simple secondary alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+    </div>
+    <div class="alert" role="alert" [class.alert-success]="classe.value == 'alert-success'">
+        A simple success alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+    </div>
+    <div class="alert" role="alert" [class.alert-danger]="classe.value == 'alert-danger'">
+        A simple danger alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+    </div>
+    <div class="alert" role="alert" [class.alert-warning]="classe.value == 'alert-warning'">
+        A simple warning alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+    </div>
+    <div class="alert" role="alert" [class.alert-info]="classe.value == 'alert-info'">
+        A simple info alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+    </div>
+    <div class="alert" role="alert" [class.alert-light]="classe.value == 'alert-light'">
+        A simple light alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+    </div>
+    <div class="alert" role="alert" [class.alert-dark]="classe.value == 'alert-dark'">
+        A simple dark alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+    </div>
+
+    <hr>
+
+    <div class="alert {{ classe.value }}" role="alert">
+        Texto colorido conforme o combo box.
+    </div>
+
+    <hr>
+
+    <div class="alert alert-danger" role="alert" [style.display]="classe.value == 'alert-danger' ? 'block' : 'none'">
+        Esse texto só aparece em caso de erro.
+    </div>
+
 
 </section>
