--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -23,13 +23,10 @@
         </div>
         <p>Você digitou o nome: {{ nome }}</p> -->
 
-        
+
         <!-- No ngModelChange, não precisamos do target.value, pois neste caso o Angular já sabe obter o valor do evento. -->
         <div>
-            <input type="text" 
-                [ngModel]="nome"
-                (ngModelChange)="nome = $event"
-                />
+            <input type="text" [ngModel]="nome" (ngModelChange)="nome = $event" />
         </div>
         <p>Você digitou o nome: {{ nome }}</p>
 
@@ -54,7 +51,7 @@
             <input type="text" bindon-ngModel="nome">
             <p>Você digitou o nome: {{ nome }}</p>
         </div>
-        
+
         <div>
             <p>Nome</p>
             <input type="text" [(ngModel)]="pessoa.nome">
@@ -65,9 +62,13 @@
             <p>Minha idade é {{ pessoa.idade }}</p>
 
         </div>
+    </article>
+</section>
 
-
-
-
+<section>
+    <article>
+        <h3>Input/Output Properties</h3>
+        <app-curso [nome]="nomeDoCurso"></app-curso>
+        <!-- Acima estamos passando um objeto ou variável do data-binding component para o input-property component-->
     </article>
 </section>
