--- a/data-binding/src/app/app.component.html
+++ b/data-binding/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <app-data-binding></app-data-binding> -->
-<app-ciclo [valorInicial]="valor" *ngIf="!deletarCiclo"></app-ciclo>
+<app-data-binding></app-data-binding>
+<!-- <app-ciclo [valorInicial]="valor" *ngIf="!deletarCiclo"></app-ciclo>
 <button class="btn btn-primary" (click)="mudarValor()">Mudar valor</button>
-<button class="btn btn-primary" (click)="destruirCiclo()">Deletar</button>
+<button class="btn btn-primary" (click)="destruirCiclo()">Deletar</button> -->
