--- a/diretivas/src/app/diretiva-ngif/diretiva-ngif.component.html
+++ b/diretivas/src/app/diretiva-ngif/diretiva-ngif.component.html
@@ -1,1 +1,35 @@
-<p>diretiva-ngif works!</p>
+<h3>*ngIf</h3>
+
+<div *ngIf="cursos.length > 0">
+    Lista de cursos aqui:
+</div>
+<div *ngIf="cursos.length == 0">
+    Não existem cursos para serem listados.
+</div>
+
+<div *ngIf="mostrarCursos">
+    Lista de cursos aqui:
+</div>
+<div *ngIf="!mostrarCursos">
+    Não existem cursos para serem listados.
+</div>
+
+<br>
+
+<button (click)="onMostrarCursos()">Mostrar cursos</button>
+
+<br>
+
+<h3>hidden como alternativa:</h3>
+<div [hidden]="!mostrarCursos">
+    Lista de cursos aqui:
+</div>
+<div [hidden]="mostrarCursos">
+    Não existem cursos para serem listados.
+</div>
+
+<!-- hidden é recomendado para árvores de elementos pequena.
+ngIf é recomendado para árvores de elementos grandes.
+
+Porém, o hidden é muito menos custoso caso o custo para criar a árvore de
+elementos seja grande. -->
