--- a/diretivas/src/app/diretiva-ngswitch/diretiva-ngswitch.component.html
+++ b/diretivas/src/app/diretiva-ngswitch/diretiva-ngswitch.component.html
@@ -34,3 +34,21 @@
         </p>
     </span>
 </div>
+
+<h3>
+    Removendo o * e usando template.
+</h3>
+<p>Não funciona, pela questão que acredito que não se usa mais essas soluções abaixo nas novas versões.</p>
+<!-- <div class="container">
+    <span [ngSwitch]="aba">
+        <template [ngSwitchCase]="'mapa'">
+            <p>Modo mapa ativado</p>
+        </template>
+        <template [ngSwitchCase]="'lista'">
+            <p>Modo lista ativado</p>
+        </template>
+        <template [ngSwitchCase]="'home'" ngSwitchDefault>
+            <p>Home</p>
+        </template>
+    </span>
+</div> -->
