--- a/diretivas/src/app/app.component.html
+++ b/diretivas/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-diretiva-ngif></app-diretiva-ngif>
+<!-- <app-diretiva-ngif></app-diretiva-ngif>
 <hr>
 <app-diretiva-ngswitch></app-diretiva-ngswitch>
 <hr>
-<app-diretiva-ngfor></app-diretiva-ngfor>
+<app-diretiva-ngfor></app-diretiva-ngfor> -->
+
+<app-diretiva-ngclass></app-diretiva-ngclass>
