--- a/diretivas/src/app/app.component.html
+++ b/diretivas/src/app/app.component.html
@@ -8,4 +8,19 @@
 
 <!-- <app-diretiva-ngstyle></app-diretiva-ngstyle> -->
 
-<app-operador-elvis></app-operador-elvis>
+<!-- <app-operador-elvis></app-operador-elvis> -->
+
+<!-- <app-exemplo-ng-content>
+    Conteúdo passado para o componente.
+</app-exemplo-ng-content> -->
+
+<!-- Utilizando seletores -->
+
+<app-exemplo-ng-content>
+    <div class="titulo">
+        Título do painel
+    </div>
+    <div class="corpo">
+        Corpo do painel
+    </div>
+</app-exemplo-ng-content>
