diretiva de atributo, elementRef e Renderer

--- a/diretivas/src/app/app.component.html
+++ b/diretivas/src/app/app.component.html
@@ -16,11 +16,13 @@
 
 <!-- Utilizando seletores -->
 
-<app-exemplo-ng-content>
+<!-- <app-exemplo-ng-content>
     <div class="titulo">
         Título do painel
     </div>
     <div class="corpo">
         Corpo do painel
     </div>
-</app-exemplo-ng-content>
+</app-exemplo-ng-content> -->
+
+<app-diretivas-customizadas></app-diretivas-customizadas>
