--- a/diretivas/src/app/diretivas-customizadas/diretivas-customizadas.component.html
+++ b/diretivas/src/app/diretivas-customizadas/diretivas-customizadas.component.html
@@ -3,3 +3,7 @@
 </p>
 <hr>
 <button fundoAmarelo>Botão com fundo amarelo</button>
+<br>
+<p highlightMouse>
+    Texto com highlight quando passo o mouse.
+</p>
