diretivas com Input e Property Binding

--- a/diretivas/src/app/diretivas-customizadas/diretivas-customizadas.component.html
+++ b/diretivas/src/app/diretivas-customizadas/diretivas-customizadas.component.html
@@ -1,4 +1,4 @@
-<p fundoAmarelo>
+<!-- <p fundoAmarelo>
     texto com fundo amarelo
 </p>
 <hr>
@@ -6,4 +6,12 @@
 <br>
 <p highlightMouse>
     Texto com highlight quando passo o mouse.
+</p> -->
+
+<!-- <p highlight [defaultColor]="''" [highlightColor]="'blue'">
+    Texto com highlight com cores customizadas.
+</p> -->
+<p>Abaixo a mesma coisa, porém com um código mais enxuto e usando o nome do Input Property igual o nome da diretiva.</p>
+<p [highlight]="'blue'" [defaultColor]="''">
+    Texto com highlight com cores customizadas.
 </p>
