--- a/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
+++ b/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
@@ -1,6 +1,6 @@
 <h3>Exemplo de pipes</h3>
 
-<p>Título: {{ livro.titulo | uppercase }}</p>
+<p>Título: {{ livro.titulo | lowercase | camelCase }}</p>
 <p>Estrelas: {{ livro.rating | number:'2.1-2' }}</p>
 <p>Páginas: {{ livro.numeroPaginas | number }}</p>
 <p>Preço: R$ {{ livro.preco | currency:'BRL':true }}</p>
