--- a/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
+++ b/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
@@ -3,7 +3,7 @@
 <p>Título: {{ livro.titulo | lowercase | camelCase }}</p>
 <p>Estrelas: {{ livro.rating | number:'2.1-2' }}</p>
 <p>Páginas: {{ livro.numeroPaginas | number }}</p>
-<p>Preço: R$ {{ livro.preco | currency:'BRL':true }}</p>
+<p>Preço: {{ livro.preco | currency:'BRL':true }}</p>
 <p>Data de lançamento: {{ livro.dataLancamento | date:'dd-MMM-yyyy' }}</p>
 <p>Url: {{ livro.url }}</p>
 <br>
