--- a/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
+++ b/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
@@ -10,3 +10,20 @@
 <p>Livro: {{ livro | json }}</p>
 
 <p>Título: {{ livro.titulo | uppercase | lowercase }}</p> <!-- Aqui o uppercase será sobreposto pelo lowercase -->
+
+<input type="text" [(ngModel)]="filtro">
+
+<br>
+
+<input type="text" #novoValor>
+<button (click)="addCurso(novoValor.value)">Add Curso</button>
+
+<h5>Pipe Puro</h5>
+
+<ul>
+    <!-- NÃO FAÇAM ISSO EM UM PROJETO REAL, APENAS PARA APRENDER AQUI,
+    NO PRÓXIMO COMMIT ESTÁ A COISA CERTA A SE FAZER -->
+    <li *ngFor="let liv of livros | filtroArray:filtro">
+        {{ liv }}
+    </li>
+</ul>
