--- a/rotas/src/app/cursos/cursos.component.html
+++ b/rotas/src/app/cursos/cursos.component.html
@@ -1,1 +1,5 @@
-<p>cursos works!</p>
+<mat-selection-list #shoes [multiple]="false">
+    <mat-list-option *ngFor="let curso of cursos" [routerLink]="['/curso', curso.id]">
+      {{ curso.nome }}
+    </mat-list-option>
+  </mat-selection-list>
