--- a/rotas/src/app/cursos/cursos.component.html
+++ b/rotas/src/app/cursos/cursos.component.html
@@ -1,5 +1,8 @@
+<p>Página: {{ pagina }}</p>
 <mat-selection-list #shoes [multiple]="false">
     <mat-list-option *ngFor="let curso of cursos" [routerLink]="['/curso', curso.id]">
-      {{ curso.nome }}
+        {{ curso.nome }}
     </mat-list-option>
-  </mat-selection-list>
+</mat-selection-list>
+
+<button (click)="proximaPagina()">Próxima Página</button>
