--- a/rotas/src/app/navbar/navbar.component.html
+++ b/rotas/src/app/navbar/navbar.component.html
@@ -27,6 +27,12 @@
                 </i>
                 Curso com id
             </a>
+            <a mat-list-item [routerLink]="['/alunos']" routerLinkActive="router-link-active">
+                <i class="material-icons">
+                    people
+                </i>
+                Alunos
+            </a>
         </mat-nav-list>
     </mat-sidenav>
 
