--- a/rotas/src/app/navbar/navbar.component.html
+++ b/rotas/src/app/navbar/navbar.component.html
@@ -21,12 +21,12 @@
                 </i>
                 Cursos
             </a>
-            <a mat-list-item [routerLink]="['/curso', idCurso.value]" routerLinkActive="router-link-active">
+            <!-- <a mat-list-item [routerLink]="['/curso', idCurso.value]" routerLinkActive="router-link-active">
                 <i class="material-icons">
                     school
                 </i>
                 Curso com id
-            </a>
+            </a> -->
             <a mat-list-item [routerLink]="['/alunos']" routerLinkActive="router-link-active">
                 <i class="material-icons">
                     people
@@ -37,8 +37,8 @@
     </mat-sidenav>
 
     <mat-sidenav-content class="content">
-        <p>Entre com o id do curso: </p>
-        <input #idCurso type="text">
+        <!-- <p>Entre com o id do curso: </p>
+        <input #idCurso type="text"> -->
         <router-outlet></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
