--- a/rotas/src/app/alunos/aluno-detalhe/aluno-detalhe.component.html
+++ b/rotas/src/app/alunos/aluno-detalhe/aluno-detalhe.component.html
@@ -1,1 +1,6 @@
-<p>aluno-detalhe works!</p>
+<h3>Detalhes do aluno:</h3>
+<p>Id: {{ aluno.id }}</p>
+<p>Nome: {{ aluno.nome }}</p>
+<p>E-mail: {{ aluno.email }}</p>
+
+<button (click)="editarAluno()">Editar</button>
