--- a/rotas/src/app/login/login.component.html
+++ b/rotas/src/app/login/login.component.html
@@ -1,1 +1,14 @@
-<p>login works!</p>
+<h3>Login</h3>
+
+<div>
+    <div>
+        <label for="usuario">Usuário</label>
+        <input [(ngModel)]="usuario.nome" id="usuario" type="text">
+    </div>
+    <div>
+        <label for="senha">Senha</label>
+        <input [(ngModel)]="usuario.senha" id="senha" type="password">
+    </div>
+</div>
+
+<button type="submit" name="action" (click)="fazerLogin()">Login</button>
