--- a/rotas/src/app/alunos/aluno-form/aluno-form.component.html
+++ b/rotas/src/app/alunos/aluno-form/aluno-form.component.html
@@ -8,11 +8,11 @@
 
     <mat-form-field appearance="fill">
         <mat-label>Nome</mat-label>
-        <input disabled [(ngModel)]="aluno.nome" id="nome" type="text" matInput placeholder="Nome">
+        <input [(ngModel)]="aluno.nome" id="nome" type="text" matInput placeholder="Nome" (input)="onInput()">
     </mat-form-field>
 
     <mat-form-field appearance="fill">
         <mat-label>E-mail</mat-label>
-        <input disabled [(ngModel)]="aluno.email" id="email" type="text" matInput placeholder="E-mail">
+        <input [(ngModel)]="aluno.email" id="email" type="text" matInput placeholder="E-mail">
     </mat-form-field>
 </div>
