--- a/rotas/src/app/navbar/navbar.component.html
+++ b/rotas/src/app/navbar/navbar.component.html
@@ -14,6 +14,11 @@
                     home
                 </i> Login
             </a>
+            <a mat-list-item [routerLink]="['']" routerLinkActive="router-link-active">
+                <i class="material-icons">
+                    home
+                </i> Home
+            </a>
             <!-- Apenas para constar, usando um CSS para deixar o link como ativo quando o usuário clicas, usar o routerLinkActive como abaixo apenas que irá funcionar.-->
             <a mat-list-item [routerLink]="['/cursos']" [queryParams]="{pagina:1}"
                 routerLinkActive="router-link-active">
