Form Template Driven - incicializando valores com ngModel (TwoWay DataBinding)

--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -1,14 +1,20 @@
 <form #f="ngForm" (ngSubmit)="onSubmit(f)">
     <div class="form-floating mb-3">
         <input type="text" class="form-control" id="nome" placeholder="Seu nome"
-        name="nome" ngModel>
+        name="nome" [(ngModel)]="usuario.nome">
         <label for="nome">Nome</label>
     </div>
     <div class="form-floating mb-3">
         <input type="email" class="form-control" id="email" placeholder="nome@email.com"
-        name="email" ngModel>
+        name="email" [(ngModel)]="usuario.email">
         <label for="email">E-mail</label>
     </div>
+
+    <!-- Usamos o two way data binding, porém pode-se usar apenas o property binding
+    caso preferir, onde será apenas inicializado o valor do objeto e se houver mudanças, não
+será atualizado.
+        ngModel
+        [ngModel]="usuario.nome"-->
 
     <!-- <div class="mb-3 form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
