--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -1,19 +1,32 @@
 <form #f="ngForm" (ngSubmit)="onSubmit(f)">
     <div class="form-floating mb-3">
         <input type="text" class="form-control" id="nome" placeholder="Seu nome" name="nome" [(ngModel)]="usuario.nome"
-            required #nome>
+            required #nome="ngModel">
         <label for="nome">Nome</label>
     </div>
+    <!-- Abaixo poderíamos utilizar também um hidden usando property binding -->
+    <alert type="warning" *ngIf="!nome.valid && nome.touched">
+        <div>
+            <strong>Atenção!</strong> Nome é obrigatório.
+        </div>
+    </alert>
+
     <!-- 
     Apenas para testar aparecendo na tela as classes que estão sendo aplicadas ao elemento nome.    
     <div>
         {{ nome.className }}
     </div> -->
+
     <div class="form-floating mb-3">
         <input type="email" class="form-control" id="email" placeholder="nome@email.com" name="email"
-            [(ngModel)]="usuario.email" required email>
+            [(ngModel)]="usuario.email" required email #email="ngModel">
         <label for="email">E-mail</label>
     </div>
+    <alert type="warning" *ngIf="!email.valid && email.touched">
+        <div>
+            <strong>Atenção!</strong> E-mail é obrigatório.
+        </div>
+    </alert>
 
     <!-- Usamos o two way data binding, porém pode-se usar apenas o property binding
     caso preferir, onde será apenas inicializado o valor do objeto e se houver mudanças, não
