--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -1,25 +1,23 @@
 <form #f="ngForm" (ngSubmit)="onSubmit(f)">
     <div class="form-floating mb-3">
         <input type="text" class="form-control" id="nome" placeholder="Seu nome" name="nome" [(ngModel)]="usuario.nome"
-            required #nome="ngModel">
+            required #nome="ngModel"
+            [class.is-invalid]="!nome.valid && nome.touched"
+            [class.is-valid]="nome.valid && nome.touched">
         <label for="nome">Nome</label>
     </div>
-    <!-- Abaixo poderíamos utilizar também um hidden usando property binding -->
+
     <alert type="warning" *ngIf="!nome.valid && nome.touched">
         <div>
             <strong>Atenção!</strong> Nome é obrigatório.
         </div>
     </alert>
 
-    <!-- 
-    Apenas para testar aparecendo na tela as classes que estão sendo aplicadas ao elemento nome.    
-    <div>
-        {{ nome.className }}
-    </div> -->
-
     <div class="form-floating mb-3">
         <input type="email" class="form-control" id="email" placeholder="nome@email.com" name="email"
-            [(ngModel)]="usuario.email" required email #email="ngModel">
+            [(ngModel)]="usuario.email" required email #email="ngModel"
+            [class.is-invalid]="!email.valid && email.touched"
+            [class.is-valid]="email.valid && email.touched">
         <label for="email">E-mail</label>
     </div>
     <alert type="warning" *ngIf="!email.valid && email.touched">
@@ -28,16 +26,8 @@
         </div>
     </alert>
 
-    <!-- Usamos o two way data binding, porém pode-se usar apenas o property binding
-    caso preferir, onde será apenas inicializado o valor do objeto e se houver mudanças, não
-será atualizado.
-        ngModel
-        [ngModel]="usuario.nome"-->
-
-    <!-- <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div> -->
-
-    <button type="submit" class="btn btn-primary">Enviar</button>
+    <button type="submit" class="btn btn-primary"
+    [disabled]="!f.valid">
+        Enviar
+    </button>
 </form>
