--- a/forms/src/app/template-form/template-form.component.html
+++ b/forms/src/app/template-form/template-form.component.html
@@ -24,7 +24,7 @@
         <div class="col-md-3">
             <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="cep" name="cep" ngModel required #cep="ngModel"
-                    placeholder="13.000-000" [ngClass]="aplicaCSSErro(cep)" (blur)="consultaCEP(cep.value)">
+                    placeholder="13.000-000" [ngClass]="aplicaCSSErro(cep)" (blur)="consultaCEP(cep.value, f)">
                 <label for="cep">CEP</label>
                 <!-- Em versões anteriores, ex Angular 2, o event binding blur seria ="consultaCEP($event.target.value)"-->
             </div>
@@ -40,7 +40,7 @@
             </div>
         </div>
     
-        <div class="col-md-12">
+        <div class="col-md-10">
             <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="rua" name="rua" ngModel required #rua="ngModel"
                     placeholder="13.000-000" [ngClass]="aplicaCSSErro(rua)">
@@ -48,6 +48,17 @@
             </div>
     
             <app-campo-control-erro [mostrarErro]="verificaInvalidTouched(rua)" msgErro="Rua é obrigatório">
+            </app-campo-control-erro>
+        </div>
+
+        <div class="col-md-2">
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="numero" name="numero" ngModel required #numero="ngModel"
+                    placeholder="" [ngClass]="aplicaCSSErro(numero)">
+                <label for="rua">Número</label>
+            </div>
+    
+            <app-campo-control-erro [mostrarErro]="verificaInvalidTouched(numero)" msgErro="Número é obrigatório">
             </app-campo-control-erro>
         </div>
     
