Formulario Reativo - Fazendo Submit

--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -1,4 +1,4 @@
-<form class="row g-2 gy-2" [formGroup]="formulario">
+<form class="row g-2 gy-2" [formGroup]="formulario" (ngSubmit)="onSubmit()">
     <div class="col-md-6">
         <div class="form-floating mb-3">
             <!-- No lugar de name="nome", para o Angular identificar o campo com o objeto formulário,
